--- a/dashboard.css
+++ b/dashboard.css
@@ -31,7 +31,7 @@ body {
   padding: 0;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-color: #eeecff;
+  background-color: #eff6ff;
   color: #190069;
 
 }
