--- a/profile.css
+++ b/profile.css
@@ -19,7 +19,7 @@
   padding: 0;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-color: #eeecff;
+  background-color: #eff6ff;
   color: #190069;
 
 }
