--- a/jadwal.css
+++ b/jadwal.css
@@ -56,6 +56,7 @@ body {
 .senin {
   animation: blurIn 3s ease-in-out;
   padding: 20px;
+  
 }
 
 .senin .hari {
@@ -63,6 +64,8 @@ body {
   background-color: rgb(255, 225, 143);
   border-radius: 10px 10px 0 0;
   margin-bottom: 0; /* Menghilangkan ruang ke bawah */
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .senin .hari p {
@@ -82,6 +85,8 @@ body {
   background-color: white;
   padding-top: 0; /* Menghilangkan padding atas */
   border-radius: 0 10px 10px 10px;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .senin .matkul h3 {
@@ -148,6 +153,8 @@ body {
   background-color: rgb(255, 225, 143);
   border-radius: 10px 10px 0 0;
   margin-bottom: 0; /* Menghilangkan ruang ke bawah */
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .senin .hari p {
@@ -169,6 +176,7 @@ body {
   padding-top: 0; /* Menghilangkan padding atas */
   border-radius: 0 10px 10px 10px;
   margin-bottom: 70px;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .senin .matkul-akhir h3 {
