--- a/khs/khs.css
+++ b/khs/khs.css
@@ -36,6 +36,11 @@ font-size: 20px;
 animation: slideRightText 1.2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
+
+/* grafik */
+
+
+
 /* Animasi slideRightText hanya untuk teks */
 @keyframes slideRightText {
 from {
