--- a/kehadiran/kehadiran.css
+++ b/kehadiran/kehadiran.css
@@ -36,6 +36,117 @@ font-size: 20px;
 animation: slideRightText 1.2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
+
+/* matriks */
+.content {
+  padding: 20px;
+  background-color: white;
+  margin: 35px 20px;
+  border-radius: 10px;
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.1); /* Bayangan yang jatuh ke bawah */
+  animation: blurIn 3s ease-in-out;
+}
+
+/* matkul */
+.matkul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.matkul .matkul-jadwal h2{
+  font-size: 16px;
+  margin: 0;
+}
+
+.matkul .matkul-jadwal p{
+  font-size: 13px;
+  color: #94a3b8;
+  margin: 0;
+}
+.matkul .detail img {
+  width: 30px;
+}
+
+/* absesnsi */
+.ket {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.hadir {
+  background-color: white;
+  display: flex;
+  border-radius: 10px;
+  border: 1px solid;
+  border-color: #6f6f6f1e;
+  padding: 8px;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.hadir p {
+  margin-right: 20px;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.hadir .persen {
+  background-color: rgba(114, 255, 152, 0.682);
+  border-radius: 10px;
+
+}
+
+.hadir .persen p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+/* presentase kehadiran */
+.presentase{
+  background-color: white;
+  display: flex;
+  border-radius: 10px;
+  border: 1px solid;
+  border-color: #6f6f6f1e;
+  padding: 8px;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.presentase p {
+  font-size: 10px;
+  margin-right: 20px;
+  font-weight: bold;
+}
+
+.presentase .persen {
+  background-color: rgba(114, 255, 152, 0.682);
+  border-radius: 10px;
+
+}
+
+.presentase .persen p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Animasi slideRightText hanya untuk teks */
 @keyframes slideRightText {
 from {
@@ -45,4 +156,22 @@ to {
  transform: translateX(0); /* Menuju posisi normal */
 }
 }
+
+
+/* blur content */
+@keyframes blurIn {
+  0% {
+    opacity: 0;
+    filter: blur(10px);
+  }
+  50% {
+    opacity: 1;
+    filter: blur(0);
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
 
