--- a/krs/krs.css
+++ b/krs/krs.css
@@ -89,7 +89,7 @@ body {
 }
 
 .jumlah-sks {
-  background-color: #fde68a;
+  background-color: #efc956;
   color: #190069;
   border-radius: 0 25px 25px 0;
   flex: 1; /* Mengatur .jumlah-sks lebih pendek dari .semester */
@@ -114,7 +114,7 @@ body {
   margin: 20px;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
 
-  background-color: #fde68a;
+  background-color: #efc956;
 
   border-radius: 15px;
 }
