--- a/kehadiran/pkn/pkn.css
+++ b/kehadiran/pkn/pkn.css
@@ -29,8 +29,7 @@ body {
   
      margin: 0;
      padding: 0;
-     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-       "Lucida Sans", Arial, sans-serif;
+     font-family: "Poppins", sans-serif;
      background-color: #eff6ff;
      color: #190069;
    
