--- a/khs/khs.css
+++ b/khs/khs.css
@@ -1,53 +1,45 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #eff6ff;
   color: #190069;
-
 }
-
 
 /* judul */
 /* judul */
 .judul-halaman {
-background-color: white;
-margin: 0;
-padding: 0;
-height: 40px;
-display: flex;
-justify-content: flex-start; /* Posisikan konten ke kiri */
-align-items: center; /* Posisikan konten secara vertikal di tengah */
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  height: 40px;
+  display: flex;
+  justify-content: flex-start; /* Posisikan konten ke kiri */
+  align-items: center; /* Posisikan konten secara vertikal di tengah */
 }
 
 .judul-halaman img {
-height: 20px;
-margin-left: 20px;
-margin-right: -10px;
-animation: slideRightText 0.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
-
+  height: 20px;
+  margin-left: 20px;
+  margin-right: -10px;
+  animation: slideRightText 0.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
 .judul-halaman h1 {
-color: #190069;
-padding: 20px;
-font-size: 20px;
-animation: slideRightText 1.2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
+  color: #190069;
+  padding: 20px;
+  font-size: 20px;
+  animation: slideRightText 1.2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
-
 
 /* grafik */
 
-
-
 /* Animasi slideRightText hanya untuk teks */
 @keyframes slideRightText {
-from {
- transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
+  from {
+    transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
+  }
+  to {
+    transform: translateX(0); /* Menuju posisi normal */
+  }
 }
-to {
- transform: translateX(0); /* Menuju posisi normal */
-}
-}
-
