--- a/profile.css
+++ b/profile.css
@@ -1,115 +1,108 @@
 @keyframes blurIn {
-     0% {
-         opacity: 0;
-         filter: blur(10px);
-     }
-     50% {
-         opacity: 1;
-         filter: blur(0);
-     }
-     100% {
-         opacity: 1;
-         filter: blur(0);
-     }
- }
- 
-   
- body {
-  margin: 0;
-  padding: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  background-color: #eff6ff;
-  color: #190069;
-
+  0% {
+    opacity: 0;
+    filter: blur(10px);
+  }
+  50% {
+    opacity: 1;
+    filter: blur(0);
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: #eff6ff;
+  color: #190069;
+}
 
 /* judul */
 /* judul */
 .judul-halaman {
-background-color: white;
-margin: 0;
-padding: 0;
-height: 40px;
-display: flex;
-justify-content: flex-start; /* Posisikan konten ke kiri */
-align-items: center; /* Posisikan konten secara vertikal di tengah */
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  height: 40px;
+  display: flex;
+  justify-content: flex-start; /* Posisikan konten ke kiri */
+  align-items: center; /* Posisikan konten secara vertikal di tengah */
 }
 
 .judul-halaman h1 {
-color: #190069;
-padding: 20px;
-font-size: 20px;
-animation: slideRightText 1.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
+  color: #190069;
+  padding: 20px;
+  font-size: 20px;
+  animation: slideRightText 1.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
 /* Animasi slideRightText hanya untuk teks */
 @keyframes slideRightText {
-from {
- transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
+  from {
+    transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
+  }
+  to {
+    transform: translateX(0); /* Menuju posisi normal */
+  }
 }
-to {
- transform: translateX(0); /* Menuju posisi normal */
-}
-}
-
-
 
 /* users */
 .users {
-     animation: blurIn 3s ease-in-out;
-     margin-top: 30px;
-     text-align: center;
+  animation: blurIn 3s ease-in-out;
+  margin-top: 30px;
+  text-align: center;
 }
 
 .users img {
-     height: 100px;
-     border-radius: 50%;
-     box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
-     margin-bottom: 15px;
-
-    }
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
+}
 
 /* Popup */
 .popup {
-     display: none;
-     position: fixed;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     z-index: 9999;
-     padding: 20px;
-   }
-   
-   .popup img {
-     max-width: 390px;
-     max-height: 390px;
-     display: block;
-     margin: 0 auto;
-   }
-   
-   .close-btn {
-     position: absolute;
-     top: 10px;
-     right: 20px;
-     cursor: pointer;
-     color: #000000;
-     font-size: 27px;
-     font-weight: bold;
-   }
-   
-   /* Latar belakang gelap */
-   .dark-overlay {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     z-index: 9998; /* Pastikan latar belakang berada di bawah popup */
-     backdrop-filter: blur(5px); /* Efek blur hanya untuk latar belakang */
-   }
-  
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  padding: 20px;
+}
+
+.popup img {
+  max-width: 390px;
+  max-height: 390px;
+  display: block;
+  margin: 0 auto;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+  color: #000000;
+  font-size: 27px;
+  font-weight: bold;
+}
+
+/* Latar belakang gelap */
+.dark-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9998; /* Pastikan latar belakang berada di bawah popup */
+  backdrop-filter: blur(5px); /* Efek blur hanya untuk latar belakang */
+}
+
 /* status mahasiswa */
 .status {
   animation: blurIn 3s ease-in-out;
@@ -118,7 +111,6 @@ to {
   padding: 15px;
   background-color: white;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
-
 }
 
 .status a {
@@ -140,7 +132,6 @@ to {
   margin: 15px;
   position: relative;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
-
 }
 
 .toggle-btn {
@@ -155,7 +146,6 @@ to {
   padding: 5px 10px;
   cursor: pointer;
 }
-
 
 /* Ganti dengan ikon baca selengkapnya dan tutup */
 .toggle-btn i {
@@ -186,7 +176,6 @@ to {
   margin: 15px;
   position: relative;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
-
 }
 
 .toggle-btn-ortu {
@@ -224,7 +213,6 @@ to {
 
 /* LOG OUT */
 .logOut {
-  
   animation: blurIn 3s ease-in-out;
   text-align: center;
   border-radius: 20px;
@@ -241,12 +229,10 @@ to {
   border: none;
   font-weight: 545;
   color: rgba(161, 53, 53, 0.808);
-  
 }
 
 /* navbar */
 .navigasi {
-  
   position: fixed;
   bottom: 0;
   height: 6.5%;
@@ -276,7 +262,6 @@ to {
 }
 
 .navbar img {
-  
   margin-top: 10px;
   max-width: 25px;
   transition: transform 0.3s ease; /* Menambahkan transisi untuk efek yang lebih halus */
