menambahkan fitur scrol to top

--- a/krs/krs.css
+++ b/krs/krs.css
@@ -489,3 +489,30 @@ body {
 .toggle-button-krs-smt-1 I {
   transition: transform 10s ease;
 }
+
+
+/* to top */
+.scroll-to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  text-decoration: none;
+  transition: opacity 0.3s ease;
+}
+
+.scroll-to-top:hover {
+  opacity: 0.8;
+}
+
+html {
+  scroll-behavior: smooth;
+}
